--- a/src/templates/en_CA/League/schedule.tmpl
+++ b/src/templates/en_CA/League/schedule.tmpl
@@ -12,7 +12,7 @@
       &nbsp;
     {else}
       {if $perm_edit_schedule and $week.editable}
-        <a href="{$app_cgi_location}?op=league_schedule_view;id={$league_id};week_id={$week.id}">edit week</a>
+        <a href="{$app_cgi_location}?op=league_schedule_view&id={$league_id}&week_id={$week.id}">edit week</a>
       {/if}
     {/if}
     </td>
@@ -95,19 +95,19 @@
     <td>{$game.time}</td>
     <td>
       {if $game.home_id}
-        <a href="{$app_cgi_location}?op=team_view;id={$game.home_id}">{$game.home_name}</a>{if $game.home_shirt}({$game.home_shirt}){/if}
+        <a href="{$app_cgi_location}?op=team_view&id={$game.home_id}">{$game.home_name}</a>{if $game.home_shirt}({$game.home_shirt}){/if}
       {else}
 			Not yet scheduled.
       {/if}
     </td>
     <td>
       {if $game.away_id}
-        <a href="{$app_cgi_location}?op=team_view;id={$game.away_id}">{$game.away_name}</a>{if $game.away_shirt}({$game.away_shirt}){/if}
+        <a href="{$app_cgi_location}?op=team_view&id={$game.away_id}">{$game.away_name}</a>{if $game.away_shirt}({$game.away_shirt}){/if}
       {else}
 			Not yet scheduled.
       {/if}
     </td>
-    <td><a href="{$app_cgi_location}?op=field_view;id={$game.field_id}">{$game.field_name}</a>&nbsp;</td>
+    <td><a href="{$app_cgi_location}?op=field_view&id={$game.field_id}">{$game.field_name}</a>&nbsp;</td>
     <td>{$game.home_score}</td>
     <td>{$game.away_score}</td>
     {if $game.default}
