- added DB schema to CVS - ability to edit fields - list ability for most things

--- a/src/templates/en_CA/Person/edit_confirm.tmpl
+++ b/src/templates/en_CA/Person/edit_confirm.tmpl
@@ -43,9 +43,9 @@
       <td class='row_title'>Email Address:</td> 
       <td class='row_data'>
         {if $perm_edit_email}
-        <input type="hidden" name="primary_email" value="{$primary_email}">
+        <input type="hidden" name="email" value="{$email}">
         {/if}
-        {$primary_email}
+        {$email}
       </td>
     </tr>
     
