--- a/src/templates/en_CA/Field/edit_confirm.tmpl
+++ b/src/templates/en_CA/Field/edit_confirm.tmpl
@@ -1,5 +1,5 @@
 {include file="$app_template_dir/common/basic_header.tmpl"}
-<h1>Editing {$field_name}</h1>
+<h1>{if $id}Editing {$field_name}{else}Create New Field{/if}</h1>
 <p>
 	Confirm that the data below is correct, and hit continue to make your changes.
 </p>
