- use client IP address as well as session cookie in order to prevent login spoofing

--- a/src/templates/en_CA/Person/view.tmpl
+++ b/src/templates/en_CA/Person/view.tmpl
@@ -67,6 +67,10 @@
     <td class='row_title'>Last Login:</td> 
     <td class='row_data'>{$last_login|escape}</td>
   </tr>
+  <tr>
+    <td class='row_title'>Last Login From:</td> 
+    <td class='row_data'>{$client_ip|escape}</td>
+  </tr>
   {/if}
 
   <tr>
