--- a/src/templates/en_CA/Team/edit_form.tmpl
+++ b/src/templates/en_CA/Team/edit_form.tmpl
@@ -1,5 +1,5 @@
 {include file="$app_template_dir/common/basic_header.tmpl"}
-<h1>Editing {$team_name}</h1>
+<h1>{if $id}Editing {$team_name}{else}Create New Team{/if}</h1>
 {if $error_message}
 <blockquote>
 	{$error_message}
