- updated TODO slightly - added user-triggered activation of account, and 'virtual signing' of waiver. - cleaned up has_permission() for Person/View.php - added viewing of account class and waiver sign date to Person/View.php

--- a/src/templates/en_CA/Person/edit_confirm.tmpl
+++ b/src/templates/en_CA/Person/edit_confirm.tmpl
@@ -1,5 +1,5 @@
 {include file="$app_template_dir/common/basic_header.tmpl"}
-<h1>Editing {$firstname} {$lastname}</h1>
+<h1>{$page_title}{if $id}: {$firstname} {$lastname}{/if}</h1>
 <p>
   Confirm that the data below is correct, and hit continue to make your changes.
 </p>
