- added league edit capability - added assorted cleanups and helper functions

--- a/src/templates/en_CA/Team/edit_confirm.tmpl
+++ b/src/templates/en_CA/Team/edit_confirm.tmpl
@@ -1,5 +1,5 @@
 {include file="$app_template_dir/common/basic_header.tmpl"}
-<h1>Editing {$team_name}</h1>
+<h1>{$page_title}{if $id}: {$team_name}{/if}</h1>
 <p>
 	Confirm that the data below is correct, and hit continue to make your changes.
 </p>
