- add 'create' functionality for leagues - started adding schedule management functionality

--- a/src/templates/en_CA/League/edit_confirm.tmpl
+++ b/src/templates/en_CA/League/edit_confirm.tmpl
@@ -54,6 +54,13 @@
       <td class='row_title'>Current Round:</td> 
       <td class='row_data'><input type="hidden" name="league_round" value="{$league_round}">{$league_round}</td>
     </tr>
+
+    <tr>
+      <td class='row_title'>Usual Start Time:</td> 
+      <td class='row_data'>
+      <input type="hidden" name="league_start_time_Hour" value="{$league_start_time_Hour}">
+      <input type="hidden" name="league_start_time_Minute" value="{$league_start_time_Minute}">{$league_start_time_Hour}:{$league_start_time_Minute}
+    </tr>
 	
 	</table>
 <br>
