--- a/src/templates/en_CA/League/edit_form.tmpl
+++ b/src/templates/en_CA/League/edit_form.tmpl
@@ -83,6 +83,13 @@
   		</td>
     </tr>
     
+    <tr>
+      <td class='row_title'>Usual Start Time:</td> 
+  		<td class='row_data'>
+        {html_select_time display_seconds=false minute_interval=5 prefix=league_start_time_ use_24_hours=true time=$league_start_time}
+  		</td>
+    </tr>
+    
 	</table>
 <br>
 <input type="submit" name="submit" value="Submit">
