--- a/src/templates/en_CA/League/schedule.tmpl
+++ b/src/templates/en_CA/League/schedule.tmpl
@@ -123,6 +123,10 @@
 {/if} {* week.edit_this *}
 {/foreach}
 </tdata></table>
-
+<p>
+  {if $perm_add_weeks}
+    <a href="{$app_cgi_location}?op=league_schedule_addweek&id={$league_id}">Add Week to Schedule</a>
+  {/if}
+</p>
 {include file="$app_template_dir/common/basic_footer.tmpl"}
 {* vim: set sw=2 ts=2 et: *}
