- partially fix handing of array input - fix leagues that might have multiple days of play - hack in the calendar-selection form for adding a week.  Needs much improvement.

--- a/src/templates/en_CA/League/edit_form.tmpl
+++ b/src/templates/en_CA/League/edit_form.tmpl
@@ -48,9 +48,9 @@
     </tr>
     
     <tr>
-      <td class='row_title'>Day(s) of week:</td> 
+      <td class='row_title' valign="top">Day(s) of week:</td> 
   		<td class='row_data'>
-  			<select name='league_day'>
+  			<select name='league_day[]' multiple>
         {create_options data=$days selected=$league_day}
   			</select>
   		</td>
