--- a/src/templates/en_CA/League/view.tmpl
+++ b/src/templates/en_CA/League/view.tmpl
@@ -16,6 +16,10 @@
     <td class='row_data'>{$league_season}</a></td>
   </tr>
   <tr>
+    <td class='row_title'>Day(s):</td> 
+    <td class='row_data'>{$league_day}</a></td>
+  </tr>
+  <tr>
     <td class='row_title'>Current Round:</td> 
     <td class='row_data'>{$league_current_round}</a></td>
   </tr>
