Generate unique member ID of the form YYYYSNNNN, where YYYY is the year the player started playing, S is their sex (0 for male, 1 for female), and NNNN is a monotonically increasing number.  If we ever hit more than 9999 players who began playing in a given year, we're in trouble, but until then....

--- a/src/templates/en_CA/Person/view.tmpl
+++ b/src/templates/en_CA/Person/view.tmpl
@@ -13,6 +13,13 @@
   </tr>
   {/if}
 
+  {if $member_id}
+  <tr>
+    <td class='row_title'>Member ID:</td> 
+    <td class='row_data'>{$member_id|escape}</td>
+  </tr>
+  {/if}
+
   {if $email}
   <tr>
     <td class='row_title'>Email Address:</td> 
