Remove rounded borders

--- a/src/templates/en_CA/common/basic_header.tmpl
+++ b/src/templates/en_CA/common/basic_header.tmpl
@@ -3,7 +3,7 @@
     <title>{$app_name}: {$page_title}</title>
     <link rel='stylesheet' href="{$app_stylesheet_file}" type="text/css">
   </head>
-  <body bgcolor="#FFFFFF">
+  <body topmargin="0" leftmargin="0" marginheight="0" marginwidth="0" bgcolor="#FFFFFF">
 {strip}
   <table class='toptable' border='0' cellpadding='3' cellspacing='0' bgcolor='black' width='100%'>
     <tr>
