Add ability to add/remove field assignments Add flag to league to set some leagues as unable to have schedules.  This will be used for grouping teams into "inactive" and "waitlist" leagues.

--- a/src/templates/en_CA/League/edit_confirm.tmpl
+++ b/src/templates/en_CA/League/edit_confirm.tmpl
@@ -61,6 +61,11 @@
       <input type="hidden" name="league_start_time_Hour" value="{$league_start_time_Hour}">
       <input type="hidden" name="league_start_time_Minute" value="{$league_start_time_Minute}">{$league_start_time_Hour}:{$league_start_time_Minute}
     </tr>
+    
+    <tr>
+      <td class='row_title'>Allow Scheduling:</td> 
+      <td class='row_data'><input type="hidden" name="league_allow_schedule" value="{$league_allow_schedule}">{$league_allow_schedule}</td>
+    </tr>
 	
 	</table>
 <br>
