--- a/src/templates/en_CA/League/view.tmpl
+++ b/src/templates/en_CA/League/view.tmpl
@@ -34,15 +34,18 @@
 </table>
 
 	<p>
-	[ <a href="{$app_cgi_location}?op=league_schedule_view&id={$league_id}">view{if $perm_adminster_league}/edit{/if} schedule</a>
+  {if $league_allow_schedule == 'Y'}
+	| <a href="{$app_cgi_location}?op=league_schedule_view&id={$league_id}">view{if $perm_adminster_league}/edit{/if} schedule</a>
 	| <a href="{$app_cgi_location}?op=league_standings&id={$league_id}">view standings</a>
+    {if $perm_administer_league}
+	   | <a href="{$app_cgi_location}?op=league_verifyscores&id={$league_id}">approve scores</a> 
+    {/if}
+  {/if}
   {if $perm_administer_league}
-	<TMPL_IF NAME='is_league_admin'>
 		| <a href="{$app_cgi_location}?op=league_edit&id={$league_id}">edit info</a>
-		| <a href="{$app_cgi_location}?op=league_verifyscores&id={$league_id}">approve scores</a>
 		| <a href="{$app_cgi_location}?op=league_captemails&id={$league_id}">fetch captain emails</a>
   {/if}
-	]
+  |	
 	</p>
 
 <table border='0' cellpadding='3' cellspacing='0'><tdata>
