--- a/src/templates/en_CA/Menu.tmpl
+++ b/src/templates/en_CA/Menu.tmpl
@@ -52,10 +52,14 @@
       {foreach name=leaguelist from=$leagues item=league}
       <tr>
         <td class="menu_item">{$league.name}</td>
-        <td class="menu_item"><a href="{$app_cgi_location}?op=league_view&id={$league.id}">info</a></td>
+        <td class="menu_item"><a href="{$app_cgi_location}?op=league_view&id={$league.id}">view</a></td>
+        {if $league.allow_schedule == 'Y'}
         <td class="menu_item"><a href="{$app_cgi_location}?op=league_schedule_view&id={$league.id}">schedule</a></td>
         <td class="menu_item"><a href="{$app_cgi_location}?op=league_standings&id={$league.id}">standings</a></td>
         <td class="menu_item"><a href="{$app_cgi_location}?op=league_score_verify&id={$league.id}">approve scores</a></td>
+        {else}
+        <td colspan='3' class='menu_item'>&nbsp;</td>
+        {/if}
       </tr>
       {/foreach}
       </table>
