Huuuuge cleanup.   - remove duplicate permissions checking code by pushing it up into Handler.php     for most cases.  Some are still to hairy to use the common code, though.   - eliminate several unused or unneeded template variables   - consolidate all handlers of certain types into one file. This makes it     easier to notice and clean up duplicate code (and also lowers loading time     a little).   - many small cleanups too numerous to mention

--- a/src/templates/en_CA/Field/edit_confirm.tmpl
+++ b/src/templates/en_CA/Field/edit_confirm.tmpl
@@ -1,4 +1,4 @@
-{include file="$app_template_dir/common/basic_header.tmpl"}
+{include file="common/basic_header.tmpl"}
 <h1>{if $id}Editing {$field_name}{else}Create New Field{/if}</h1>
 <p>
 	Confirm that the data below is correct, and hit continue to make your changes.
@@ -24,5 +24,5 @@
 <input type="submit" name="submit" value="Submit">
 <input type="reset" name="reset" value="Reset">
 	</form>
-{include file="$app_template_dir/common/basic_footer.tmpl"}
+{include file="common/basic_footer.tmpl"}
 {* vim: set ai sw=2 ts=2 et: *}
