--- a/src/templates/en_CA/Menu.tmpl
+++ b/src/templates/en_CA/Menu.tmpl
@@ -1,4 +1,4 @@
-{include file="$app_template_dir/common/basic_header.tmpl"}
+{include file="common/basic_header.tmpl"}
 <br />
 <table border="0" cellpadding="3" cellspacing="0">
 
@@ -104,5 +104,5 @@
   {/if}
   
 </table>
-{include file="$app_template_dir/common/basic_footer.tmpl"}
+{include file="common/basic_footer.tmpl"}
 {* vim: set sw=2 ts=2 et: *}
