--- a/src/templates/en_CA/common/basic_header.tmpl
+++ b/src/templates/en_CA/common/basic_header.tmpl
@@ -1,7 +1,7 @@
 <html>
   <head>
     <title>{$app_name}: {$page_title}</title>
-    <link rel='stylesheet' href="{$app_stylesheet_file}" type="text/css">
+    <link rel='stylesheet' href="style.css" type="text/css">
   </head>
   <body topmargin="0" leftmargin="0" marginheight="0" marginwidth="0" bgcolor="#FFFFFF">
 {strip}
