--- a/src/templates/en_CA/ErrorMessage.tmpl
+++ b/src/templates/en_CA/ErrorMessage.tmpl
@@ -1,6 +1,6 @@
-{include file="$app_template_dir/common/basic_header.tmpl"}
+{include file="common/basic_header.tmpl"}
  <h1 align='left'>{$page_title}</h1>
  <blockquote>
  {$error_message}
  </blockquote>
-{include file="$app_template_dir/common/basic_footer.tmpl"}
+{include file="common/basic_footer.tmpl"}
