--- a/src/templates/en_CA/Field/assign_confirm.tmpl
+++ b/src/templates/en_CA/Field/assign_confirm.tmpl
@@ -1,4 +1,4 @@
-{include file="$app_template_dir/common/basic_header.tmpl"}
+{include file="common/basic_header.tmpl"}
 <h1>{$page_title}</h1>
 <form action="{$app_cgi_location}" method="POST">
 	<input type="hidden" name="op" value="{$page_op}">
@@ -16,5 +16,5 @@
 <input type="reset" name="reset" value="Reset">
 
 	</form>
-{include file="$app_template_dir/common/basic_footer.tmpl"}
+{include file="common/basic_footer.tmpl"}
 {* vim: set ai sw=2 ts=2 et: *}
