--- a/src/templates/en_CA/Field/assign_form.tmpl
+++ b/src/templates/en_CA/Field/assign_form.tmpl
@@ -1,4 +1,4 @@
-{include file="$app_template_dir/common/basic_header.tmpl"}
+{include file="common/basic_header.tmpl"}
 <h1>{$page_title}</h1>
 <form action="{$app_cgi_location}" method="POST">
 	<input type="hidden" name="op" value="{$page_op}">
@@ -6,7 +6,7 @@
 	<input type="hidden" name="id" value="{$id}">
 	<input type="hidden" name="day" value="{$day}">
 	<blockquote>
-	<p>Select a league to assign field <b>{$field_name}</b> to for <b>{$day}</b></p>
+	<p>Select a league to assign field <b>{$field_name}</b> for <b>{$day}</b></p>
 	<p>
 	<select name="league_id">
 	{create_options data=$leagues selected=$league_id}
@@ -17,5 +17,5 @@
 <input type="reset" name="reset" value="Reset">
 
 	</form>
-{include file="$app_template_dir/common/basic_footer.tmpl"}
+{include file="common/basic_footer.tmpl"}
 {* vim: set ai sw=2 ts=2 et: *}
