--- a/src/templates/en_CA/Field/edit_form.tmpl
+++ b/src/templates/en_CA/Field/edit_form.tmpl
@@ -1,4 +1,4 @@
-{include file="$app_template_dir/common/basic_header.tmpl"}
+{include file="common/basic_header.tmpl"}
 <h1>{if $id}Editing {$field_name}{else}Create New Field{/if}</h1>
 {if $error_message}
 <blockquote>
@@ -13,22 +13,18 @@
 	<input type="hidden" name="id" value="{$id}">
 {/if}
 <table border="0">
-    {if $perm_edit_name}
     <tr>
       <td class='row_title'>Field Name:</td> 
       <td class='row_data'><input type="text" name="field_name" size="35" value="{$field_name}"></td>
     </tr>
-    {/if}
-    {if $perm_edit_website}
     <tr>
       <td class='row_title'>Website:</td> 
       <td class='row_data'><input type="text" name="field_website" size="35" value="{$field_website}"></td>
     </tr>
-    {/if}
 </table>
 <br>
 <input type="submit" name="submit" value="Submit">
 <input type="reset" name="reset" value="Reset">
 	</form>
-{include file="$app_template_dir/common/basic_footer.tmpl"}
+{include file="common/basic_footer.tmpl"}
 {* vim: set ai sw=2 ts=2 et: *}
