--- a/src/templates/en_CA/League/schedule.tmpl
+++ b/src/templates/en_CA/League/schedule.tmpl
@@ -1,4 +1,4 @@
-{include file="$app_template_dir/common/basic_header.tmpl"}
+{include file="common/basic_header.tmpl"}
 <h1>Schedule for {$league_name}{if $league_tier} Tier {$league_tier}{/if}</h1>
 
 <table border="0" cellpadding="3" cellspacing="0"><tdata>
@@ -128,5 +128,5 @@
     <a href="{$app_cgi_location}?op=league_schedule_addweek&id={$league_id}">Add Week to Schedule</a>
   {/if}
 </p>
-{include file="$app_template_dir/common/basic_footer.tmpl"}
+{include file="common/basic_footer.tmpl"}
 {* vim: set sw=2 ts=2 et: *}
