--- a/src/templates/en_CA/League/schedule_addweek_form.tmpl
+++ b/src/templates/en_CA/League/schedule_addweek_form.tmpl
@@ -1,4 +1,4 @@
-{include file="$app_template_dir/common/basic_header.tmpl"}
+{include file="common/basic_header.tmpl"}
 <h1>Add games to {$league_name}</h1>
 
 {if $error_message}
@@ -35,5 +35,5 @@
     </td>
   </tr>
 </table>
-{include file="$app_template_dir/common/basic_footer.tmpl"}
+{include file="common/basic_footer.tmpl"}
 {* vim: set ai sw=2 ts=2 et: *}
