--- a/src/templates/en_CA/League/schedule_edit_confirm.tmpl
+++ b/src/templates/en_CA/League/schedule_edit_confirm.tmpl
@@ -1,4 +1,4 @@
-{include file="$app_template_dir/common/basic_header.tmpl"}
+{include file="common/basic_header.tmpl"}
 <h1>Editing Schedule for {$league_name}{if $league_tier} Tier {$league_tier}{/if}</h1>
 
 <p>
@@ -30,5 +30,5 @@
 </tdata></table>
       <input name='submit' value='Continue' type='submit'>
 </form>
-{include file="$app_template_dir/common/basic_footer.tmpl"}
+{include file="common/basic_footer.tmpl"}
 {* vim: set sw=2 ts=2 et: *}
