--- a/src/templates/en_CA/League/view.tmpl
+++ b/src/templates/en_CA/League/view.tmpl
@@ -1,4 +1,4 @@
-{include file="$app_template_dir/common/basic_header.tmpl"}
+{include file="common/basic_header.tmpl"}
 <h1>{$page_title}: {$league_name}{if $league_tier} Tier {$league_tier}{/if}</h1>
 <table border="0">
   <tr>
@@ -74,5 +74,5 @@
 {/foreach}
 </tdata></table>
 
-{include file="$app_template_dir/common/basic_footer.tmpl"}
+{include file="common/basic_footer.tmpl"}
 {* vim: set sw=2 ts=2 et: *}
