--- a/src/templates/en_CA/Login.tmpl
+++ b/src/templates/en_CA/Login.tmpl
@@ -1,4 +1,4 @@
-{include file="$app_template_dir/common/basic_header.tmpl"}
+{include file="common/basic_header.tmpl"}
 <br />
 <form action="{$app_cgi_location}" method="POST">
 <table align='center' border='0' cellpadding='5' width='300'>
@@ -29,5 +29,5 @@
 <input type='hidden' name='op' value='login'>
 </form>
 
-{include file="$app_template_dir/common/basic_footer.tmpl"}
+{include file="common/basic_footer.tmpl"}
 {* vim: set sw=2 ts=2 et: *}
