--- a/src/templates/en_CA/Person/change_password.tmpl
+++ b/src/templates/en_CA/Person/change_password.tmpl
@@ -1,4 +1,4 @@
-{include file="$app_template_dir/common/basic_header.tmpl"}
+{include file="common/basic_header.tmpl"}
 <h1>Changing password for {$firstname} {$lastname}</h1>
 <p>
 	You are changing the password for "{$firstname} {$lastname}" (username "{$username}").  
@@ -21,5 +21,5 @@
 <input type='submit' name='submit' value='Submit'>
 <input type='reset' name='reset' value='Reset'>
 	</form>
-{include file="$app_template_dir/common/basic_footer.tmpl"}
+{include file="common/basic_footer.tmpl"}
 {* vim: set ai sw=2 ts=2 et: *}
