--- a/src/templates/en_CA/Person/create_result.tmpl
+++ b/src/templates/en_CA/Person/create_result.tmpl
@@ -1,4 +1,4 @@
-{include file="$app_template_dir/common/basic_header.tmpl"}
+{include file="common/basic_header.tmpl"}
 <h1>{$page_title}</h1>
   <blockquote>
     <p>
@@ -8,5 +8,5 @@ email informing you.  You will then be able to log in with your username and
 password.
     </p>
   </blockquote>
-{include file="$app_template_dir/common/basic_footer.tmpl"}
+{include file="common/basic_footer.tmpl"}
 {* vim: set sw=2 ts=2 et: *}
