--- a/src/templates/en_CA/Person/edit_confirm.tmpl
+++ b/src/templates/en_CA/Person/edit_confirm.tmpl
@@ -1,4 +1,4 @@
-{include file="$app_template_dir/common/basic_header.tmpl"}
+{include file="common/basic_header.tmpl"}
 <h1>{$page_title}{if $id}: {$firstname} {$lastname}{/if}</h1>
 <p>
   Confirm that the data below is correct, and hit continue to make your changes.
@@ -136,5 +136,5 @@
 <input type="submit" name="submit" value="Submit">
 <input type="reset" name="reset" value="Reset">
 	</form>
-{include file="$app_template_dir/common/basic_footer.tmpl"}
+{include file="common/basic_footer.tmpl"}
 {* vim: set ai sw=2 ts=2 et: *}
