--- a/src/templates/en_CA/Person/view.tmpl
+++ b/src/templates/en_CA/Person/view.tmpl
@@ -1,4 +1,4 @@
-{include file="$app_template_dir/common/basic_header.tmpl"}
+{include file="common/basic_header.tmpl"}
 <h1>{$full_name}</h1>
 <table border="0">
   <tr>
@@ -125,5 +125,5 @@
   {/if}
   </ul>
 
-{include file="$app_template_dir/common/basic_footer.tmpl"}
+{include file="common/basic_footer.tmpl"}
 {* vim: set sw=2 ts=2 et: *}
