--- a/src/templates/en_CA/Team/add_player_list.tmpl
+++ b/src/templates/en_CA/Team/add_player_list.tmpl
@@ -1,4 +1,4 @@
-{include file="$app_template_dir/common/basic_header.tmpl"}
+{include file="common/basic_header.tmpl"}
 <h1>{$page_title}</h1>
 {if $letters}
 {foreach from=$letters item=i}
@@ -23,5 +23,5 @@
 </tr>
 {/foreach}
 	</table>
-{include file="$app_template_dir/common/basic_footer.tmpl"}
+{include file="common/basic_footer.tmpl"}
 {* vim: set sw=2 ts=2 et: *}
