--- a/src/templates/en_CA/Team/edit_form.tmpl
+++ b/src/templates/en_CA/Team/edit_form.tmpl
@@ -1,4 +1,4 @@
-{include file="$app_template_dir/common/basic_header.tmpl"}
+{include file="common/basic_header.tmpl"}
 <h1>{if $id}Editing {$team_name}{else}Create New Team{/if}</h1>
 {if $error_message}
 <blockquote>
@@ -49,5 +49,5 @@
 <input type="submit" name="submit" value="Submit">
 <input type="reset" name="reset" value="Reset">
 	</form>
-{include file="$app_template_dir/common/basic_footer.tmpl"}
+{include file="common/basic_footer.tmpl"}
 {* vim: set ai sw=2 ts=2 et: *}
