--- a/src/templates/en_CA/Team/schedule_view.tmpl
+++ b/src/templates/en_CA/Team/schedule_view.tmpl
@@ -1,4 +1,4 @@
-{include file="$app_template_dir/common/basic_header.tmpl"}
+{include file="common/basic_header.tmpl"}
 
 <h1>Schedule for {$team_name}</h1>
 <p>
@@ -44,5 +44,5 @@
   </tr>
   {/foreach}
 </table>
-{include file="$app_template_dir/common/basic_footer.tmpl"}
+{include file="common/basic_footer.tmpl"}
 {* vim: set sw=2 ts=2 et ai: *}
