--- a/src/templates/en_CA/Team/view.tmpl
+++ b/src/templates/en_CA/Team/view.tmpl
@@ -1,4 +1,4 @@
-{include file="$app_template_dir/common/basic_header.tmpl"}
+{include file="common/basic_header.tmpl"}
 
 <h1>{$team_name}</h1>
 <p>
@@ -71,5 +71,5 @@
     </td>
   </tr>
 </table>
-{include file="$app_template_dir/common/basic_footer.tmpl"}
+{include file="common/basic_footer.tmpl"}
 {* vim: set sw=2 ts=2 et: *}
