--- a/src/templates/en_CA/common/basic_footer.tmpl
+++ b/src/templates/en_CA/common/basic_footer.tmpl
@@ -1,7 +1,7 @@
 <p />
 <hr noshade />
 <div align="right">
-<i>Powered by <a href="http://www.dmo.ca/projects/leaguerunner/">{$product_name}</a></i>
+<i>Powered by <a href="http://www.dmo.ca/projects/leaguerunner/">Leaguerunner</a></i>
 </div>
 </body>
 </html>
