Oops.  It appears that setting end_year=-0 is a really bad idea.  Removing it altogether does what is really wanted anyway.

--- a/src/templates/en_CA/Person/edit_form.tmpl
+++ b/src/templates/en_CA/Person/edit_form.tmpl
@@ -137,7 +137,7 @@
     <tr>
       <td class='row_title'>Year Started:</td> 
       <td class='row_data'>
-        {html_select_date prefix=started_ start_year=-20 end_year=-0 display_days=no display_months=no reverse_years=yes time=$started_year}
+        {html_select_date prefix=started_ start_year=-30 display_days=no display_months=no reverse_years=yes time=$started_year}
       </td>
     </tr>
     
